--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.r2dbc.url=r2dbc:mysql://127.0.0.1:3307/reactive_sample
+spring.r2dbc.username=root
+spring.r2dbc.password=123456
+spring.r2dbc.pool.enabled=true
